fixed alignment issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@font-face {
+  font-family: "HelveticaNow";
+  src: url("../src/assets/fonts/HelveticaNow-Regular.woff2") format("woff2"),
+       url("../src/assets/fonts/HelveticaNow-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "HelveticaNow";
+  src: url("../src/assets/fonts/HelveticaNow-Bold.woff2") format("woff2"),
+       url("../src/assets/fonts/HelveticaNow-Bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
 html,
 body {
   height: 100%;
